src/test/ui/unreachable-code-ret.stderr
error: unreachable statement
  --> $DIR/unreachable-code-ret.rs:7:5
   |
LL |     return;
   |     ------ any code following this expression is unreachable
LL |     println!("Paul is dead");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable statement
   |
note: lint level defined here
  --> $DIR/unreachable-code-ret.rs:3:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

